--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,14 @@ django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+environs==9.5.0
 gunicorn==20.1.0
 idna==3.4
 iniconfig==2.0.0
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+marshmallow==3.20.1
 oauthlib==3.2.2
 packaging==23.2
 Pillow==9.0.0
